assets/css/style.css
body {
    margin: 0;
    padding: 0;
    font-family: 'Papyrus', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;


    line-height: 1.25;
    background-image: url("https://media.cnn.com/api/v1/images/stellar/prod/noirlab2412a.jpg?c=16x9&q=h_833,w_1480,c_fill");
    background-size: cover;
    background-attachment: fixed;
    background-position: center;

}


#card1 {
    border-style: solid;
    border-width: 3px;
    border-radius: 50%;
    padding: 10px;
    flex: 300px;
    margin: 20px;
    background-color: #00dade60;
    background-image: linear-gradient(140deg, #00dade77 0%, #fb00ff85 100%);
}

#card2 {

    border-width: 1px;
    border-radius: 70px;
    padding: 10px;
    flex: 300px;
    width: 300px;
    margin: 20px;
    margin-left: 500px;
    margin-right: 500px;
    margin-bottom: 200px;
    background-color: #bd30d060;
    background-image: linear-gradient(150deg, #00dadeab 0%, #a8006885 100%);
}

#horrorscope {
    font-family: 'Papyrus';
}

.page-section {
    margin: 25px 0;
    padding: 10px 0;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: stretch;
    justify-content: space-between;
}

.text-center {
    text-align: center;

}


#zodiac-form {
    display: flex;
    flex-direction: column;
    align-items: center;

}

#zodiac-form>div>div>label {
    width: 300px !important;

}

#zodiac-form>div>div>input {
    width: 300px;
    background-color: rgba(255, 250, 250, 0.47);
    padding: .25rem;
    border-radius: 50px;
    margin-top: .25rem;
    margin-bottom: .1rem;
    text-align: center;
    font-size: larger;
    font-weight: bold;
}

main {
    margin-top: 5%;
    font-family: 'Papyrus', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

table {
    margin-left: auto;
    margin-right: auto;
    max-width: 600px;

}



th {
    text-align: center;
    letter-spacing: 1px;
    font-weight: bold;
    font-size: 20px;
}

td {
    text-align: center;
    letter-spacing: 1px;
    font-size: large;
}

table,
th,
td {
    border: 1px solid white;
    border-collapse: collapse;
}



@media screen and (max-width:700px) {
    main {
        margin-top: 40%;
    }

}

